[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hottools"
version = "0.1.0"
description = "Fast one-hot encoding of personalized genomic sequences."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Eduarda Vaz", email = "evaz2@jh.edu"}]
license = "MIT"

dependencies = [
  "numpy>=1.21",
  "pandas>=1.5",
  "pyfaidx>=0.7",
]

[project.optional-dependencies]
torch = ["torch"]
hdf5  = ["h5py>=3.8"]
mem   = ["psutil>=5.9"]
dev   = ["pytest", "ruff", "build", "twine"]

[project.scripts]
hottools = "hottools.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/eduardavaz7/hottools"
Repository = "https://github.com/eduardavaz7/hottools"
Issues = "https://github.com/eduardavaz7/hottools/issues"